2020-11-23  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-tab.y (expression): Rules for pre{incr,decr}
	expressions.
	* testsuite/poke.pkl/preincr-1.pk: New test.
	* testsuite/poke.pkl/predecr-offset-1.pk: Likewise.
	* testsuite/poke.pkl/predecr-field-1.pk: Likewise.
	* testsuite/poke.pkl/predecr-diag-2.pk: Likewise.
	* testsuite/poke.pkl/predecr-diag-1.pk: Likewise.
	* testsuite/poke.pkl/predecr-aelem-1.pk: Likewise.
	* testsuite/poke.pkl/predecr-2.pk: Likewise.
	* testsuite/poke.pkl/predecr-1.pk: Likewise.
	* testsuite/poke.pkl/preincr-offset-1.pk: Likewise.
	* testsuite/poke.pkl/preincr-field-1.pk: Likewise.
	* testsuite/poke.pkl/preincr-diag-2.pk: Likewise.
	* testsuite/poke.pkl/preincr-diag-1.pk: Likewise.
	* testsuite/poke.pkl/preincr-aelem-1.pk: Likewise.
	* testsuite/poke.pkl/preincr-2.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2020-11-22  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-dump.pk (dump): Use ++/-- wherever appropriate.
	* pickles/color.pk (color_register): Likewise.
	* pickles/id3v1.pk (id3v1_search_genre): Likewise.
	* pickles/time.pk (ptime): Likewise.

2020-11-22  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-ast.h (enum pkl_ast_code): Add PKL_AST_INCRDECR.
	(struct pkl_ast_incrdecr): New type.
	(PKL_AST_INCRDECR_ORDER): Define.
	(PKL_AST_INCRDECR_SIGN): Likewise.
	(PKL_AST_INCRDECR_EXP): Likewise.
	(PKL_AST_INCRDECR_ASS_STMT): Likewise.
	(PKL_AST_PRE): Likewise.
	(PKL_AST_POST): Likewise.
	(PKL_AST_INCR): Likewise.
	(PKL_AST_DECR): Likewise.
	(pkl_ast_make_incrdecr): New prototype.
	(pkl_ast_type_incr_step): Likewise.
	(union pkl_ast_node): New field incrdecr.
	* libpoke/pkl-ast.c (pkl_ast_make_incrdecr): New function.
	(pkl_ast_type_incr_step): Likewise.
	(pkl_ast_node_free): Handle PKL_AST_INCRDECR nodes.
	* libpoke/pkl-pass.c (pkl_do_pass_1): LIkewise.
	* libpoke/pkl-tab.y (primary): syntax for INCRDECR.
	* libpoke/pkl-typify.c (pkl_typify1_ps_incrdecr): New handler.